# software

./: .gitignore  README.md
cmake/: installer.sh  uninstaller.sh
cuda/: .cudarc  installer.sh  uninstaller.sh
eigen/: installer.sh  uninstaller.sh
eigen/cmake_test/: CMakeLists.txt  example.cpp
embree/: install_deps.sh  installer.sh  uninstaller.sh
embree/cmake_test/: CMakeLists.txt  example.cpp
lvr2/: install_deps.sh
opencv/: install_deps.sh  installer.sh  uninstaller.sh
opencv/cmake_test/: CMakeLists.txt  example.cpp
ros/: installer.sh
vulkan/: installer.sh
